get all windows from schedule Pathvariable
